--- a/src/scss/cat.module.scss
+++ b/src/scss/cat.module.scss
@@ -1,18 +1,20 @@
 .cat {
   width: 80%;
-  background-color: rgb(65, 62, 62);
+  background-color: rgba(77, 68, 68, 0.507);
   color: #fff;
   padding: 7px;
   height: inherit;
   margin: 0 auto 50px auto;
   cursor: pointer;
   border-radius: 5px;
+}
 
-  img {
-    width: 80%;
-    margin: 0 auto;
-    height: 195px;
-  }
+.descrContainer{
+  padding: 0 10px;
+  margin-top: 5px;
+  font-family: 'Lobster', cursive;
+  font-weight: 50;
+  font: 100;
 }
 
 .description {
@@ -140,10 +142,6 @@
     width: 100%;
     text-align: center;
   
-    img {
-      width: 100%;
-    }
-  
     p {
       color: #fff;
     }
@@ -153,7 +151,6 @@
       margin-top: 20px;
       h4 {
         padding: 5px;
-        font-family: 'Poppins', sans-serif;
         text-transform: uppercase;
         font-size: 20px;
         color: #fff;
